MDEV-10566: Create role statement replicated inconsistently in Galera Cluster

In galera cluster, the definer (and thus binlog invoker) must be set
for CREATE ROLE before Query_log_event is created during TOI on the
originating node.